# highway-rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: main.yml
assets/: .terraform.lock.hcl  aarch64.sh  aarch64.tf  analysis.R  avx-crash-1  highway.csv  portable-crash-1
benches/: bench_hashes.rs  highway.rs
ci/: script.sh
compare/: Cargo.toml
compare/benches/: bench_hashes.rs
examples/: hwysum.rs  no_panic.rs
fuzz/: Cargo.toml  build.rs
fuzz/fuzz_targets/: common.rs  fuzz_avx.rs  fuzz_highway.rs  fuzz_portable.rs  fuzz_sse.rs
src/: aarch64.rs  avx.rs  builder.rs  hash.rs  internal.rs  key.rs  lib.rs  macros.rs  portable.rs  sse.rs  traits.rs  v2x64u.rs  v4x64u.rs  wasm.rs
src/x86/: avx.rs  macros.rs  mod.rs  sse.rs  v2x64u.rs  v4x64u.rs
tests/: aarch64.rs  hash.rs  highway-test.rs  properties.rs  traits.rs  wasm.rs
