[package]
name = "highway"
version = "0.8.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nickbabcock/highway-rs"
categories = ["algorithms", "cryptography", "no-std"]
description = "Native Rust port of Google's HighwayHash, which makes use of SIMD instructions for a fast and strong hash function"
keywords = ["HighwayHash", "hasher", "hash", "simd", "avx"]
include = ["src/**/*.rs", "benches"]
edition = "2018"

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.3.0"
quickcheck = "1"
quickcheck_macros = "1"
doc-comment = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[[bench]]
name = "bench_hashes"
harness = false
