[package]
name = "highway"
version = "1.1.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nickbabcock/highway-rs"
categories = ["algorithms", "cryptography", "no-std"]
description = "Native Rust port of Google's HighwayHash, which makes use of SIMD instructions for a fast and strong hash function"
keywords = ["HighwayHash", "hasher", "hash", "simd", "avx"]
include = ["src/**/*.rs", "benches"]
edition = "2021"

[features]
default = ["std"]
std = []

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
criterion = { version = "< 0.4.0", default-features = false }
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = { version = "< 0.4.0" }

[[bench]]
name = "bench_hashes"
harness = false
